pluma_parser/tests/snapshots/parse_success__binary_op_less_than.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "\"a\" < \"b\""
---

=== Source ===
"a" < "b"

=== Comments ===
{}

=== AST ===
Module(1, 8) [
    TopLevelStatementNode {
        pos: (
            1,
            8,
        ),
        kind: Expr(
            ExprNode {
                pos: (
                    1,
                    8,
                ),
                kind: BinaryOperation {
                    left: ExprNode {
                        pos: (
                            1,
                            2,
                        ),
                        kind: Literal {
                            literal: LiteralNode {
                                pos: (
                                    1,
                                    2,
                                ),
                                kind: Str(
                                    "a",
                                ),
                            },
                        },
                        typ: Unknown,
                    },
                    op: OperatorNode {
                        pos: (
                            4,
                            5,
                        ),
                        kind: LessThan,
                    },
                    right: ExprNode {
                        pos: (
                            7,
                            8,
                        ),
                        kind: Literal {
                            literal: LiteralNode {
                                pos: (
                                    7,
                                    8,
                                ),
                                kind: Str(
                                    "b",
                                ),
                            },
                        },
                        typ: Unknown,
                    },
                },
                typ: Unknown,
            },
        ),
    },
]

