pluma_parser/tests/snapshots/parse_success__binary_op_plusplus.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "\"a\" ++ \"b\""
---

=== Source ===
"a" ++ "b"

=== Comments ===
{}

=== AST ===
Module(1, 9) [
    TopLevelStatementNode {
        pos: (
            1,
            9,
        ),
        kind: Expr(
            ExprNode {
                pos: (
                    1,
                    9,
                ),
                kind: BinaryOperation {
                    left: ExprNode {
                        pos: (
                            1,
                            2,
                        ),
                        kind: Literal {
                            literal: LiteralNode {
                                pos: (
                                    1,
                                    2,
                                ),
                                kind: Str(
                                    "a",
                                ),
                            },
                        },
                        typ: Unknown,
                    },
                    op: OperatorNode {
                        pos: (
                            4,
                            6,
                        ),
                        kind: Concat,
                    },
                    right: ExprNode {
                        pos: (
                            8,
                            9,
                        ),
                        kind: Literal {
                            literal: LiteralNode {
                                pos: (
                                    8,
                                    9,
                                ),
                                kind: Str(
                                    "b",
                                ),
                            },
                        },
                        typ: Unknown,
                    },
                },
                typ: Unknown,
            },
        ),
    },
]

