pluma_parser/tests/snapshots/parse_success__block_empty.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "{}"
---

=== Source ===
{}

=== Comments ===
{}

=== AST ===
Module(0, 2) [
    TopLevelStatement(0, 2) Expr(
        ExprNode {
            pos: (
                0,
                2,
            ),
            kind: Block {
                block: Block(0, 2) ([]) [],
            },
            typ: Unknown,
        },
    ),
]

