pluma_parser/tests/snapshots/parse_success__block_tuple_pattern.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "{ |(a, (b, c))| a + b + c }"
---

=== Source ===
{ |(a, (b, c))| a + b + c }

=== Comments ===
{}

=== AST ===
Module(0, 27) [
    TopLevelStatement(0, 27) Expr(
        ExprNode {
            pos: (
                0,
                27,
            ),
            kind: Block {
                block: Block(0, 27) ([
                    Pattern(3, 14) UnlabeledTuple([Pattern(4, 5) Identifier(Ident(4, 5) "a", false), Pattern(7, 13) UnlabeledTuple([Pattern(8, 9) Identifier(Ident(8, 9) "b", false), Pattern(11, 12) Identifier(Ident(11, 12) "c", false)])]),
                ]) [
                    Statement(16, 25) Expr(
                        ExprNode {
                            pos: (
                                16,
                                25,
                            ),
                            kind: BinaryOperation {
                                left: ExprNode {
                                    pos: (
                                        16,
                                        21,
                                    ),
                                    kind: BinaryOperation {
                                        left: ExprNode {
                                            pos: (
                                                16,
                                                17,
                                            ),
                                            kind: Identifier {
                                                ident: Ident(16, 17) "a",
                                            },
                                            typ: Unknown,
                                        },
                                        op: Operator(18, 19) Add,
                                        right: ExprNode {
                                            pos: (
                                                20,
                                                21,
                                            ),
                                            kind: Identifier {
                                                ident: Ident(20, 21) "b",
                                            },
                                            typ: Unknown,
                                        },
                                    },
                                    typ: Unknown,
                                },
                                op: Operator(22, 23) Add,
                                right: ExprNode {
                                    pos: (
                                        24,
                                        25,
                                    ),
                                    kind: Identifier {
                                        ident: Ident(24, 25) "c",
                                    },
                                    typ: Unknown,
                                },
                            },
                            typ: Unknown,
                        },
                    ),
                ],
            },
            typ: Unknown,
        },
    ),
]

