pluma_parser/tests/snapshots/parse_success__block_with_special_self_arg.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "let b = { $self .return 47 }"
---

=== Source ===
let b = { $self .return 47 }

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        28,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                28,
            ),
            kind: Let(
                LetNode {
                    pos: (
                        0,
                        28,
                    ),
                    pattern: PatternNode {
                        pos: (
                            4,
                            5,
                        ),
                        kind: Identifier(
                            IdentifierNode {
                                pos: (
                                    4,
                                    5,
                                ),
                                name: "b",
                            },
                            false,
                        ),
                    },
                    value: ExprNode {
                        pos: (
                            8,
                            28,
                        ),
                        kind: Block(
                            BlockNode {
                                pos: (
                                    8,
                                    28,
                                ),
                                params: [],
                                body: [
                                    StatementNode {
                                        pos: (
                                            10,
                                            26,
                                        ),
                                        kind: Expr(
                                            ExprNode {
                                                pos: (
                                                    10,
                                                    26,
                                                ),
                                                kind: Call(
                                                    CallNode {
                                                        pos: (
                                                            10,
                                                            26,
                                                        ),
                                                        callee: ExprNode {
                                                            pos: (
                                                                10,
                                                                23,
                                                            ),
                                                            kind: MethodAccess {
                                                                receiver: ExprNode {
                                                                    pos: (
                                                                        10,
                                                                        15,
                                                                    ),
                                                                    kind: Identifier(
                                                                        IdentifierNode {
                                                                            pos: (
                                                                                10,
                                                                                15,
                                                                            ),
                                                                            name: "$self",
                                                                        },
                                                                    ),
                                                                    typ: Unknown,
                                                                },
                                                                method_parts: [
                                                                    IdentifierNode {
                                                                        pos: (
                                                                            17,
                                                                            23,
                                                                        ),
                                                                        name: "return",
                                                                    },
                                                                ],
                                                            },
                                                            typ: Unknown,
                                                        },
                                                        args: [
                                                            ExprNode {
                                                                pos: (
                                                                    24,
                                                                    26,
                                                                ),
                                                                kind: Literal(
                                                                    LiteralNode {
                                                                        pos: (
                                                                            24,
                                                                            26,
                                                                        ),
                                                                        kind: IntDecimal(
                                                                            47,
                                                                        ),
                                                                    },
                                                                ),
                                                                typ: Unknown,
                                                            },
                                                        ],
                                                        typ: Unknown,
                                                    },
                                                ),
                                                typ: Unknown,
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                        typ: Unknown,
                    },
                },
            ),
        },
    ],
}

