pluma_parser/tests/snapshots/parse_success__call_multiple_parts.snap
---
source: pluma_parser/tests/parse_success.rs
expression: multiply 1 by 2
---

=== Source ===
multiply 1 by 2

=== Comments ===
{}

=== AST ===
Module(0, 15) [
    TopLevelStatement(0, 15) Expr(
        ExprNode {
            pos: (
                0,
                15,
            ),
            kind: Call {
                call: Call {
                    callee: ExprNode {
                        pos: (
                            0,
                            13,
                        ),
                        kind: MultiPartIdentifier {
                            parts: [
                                Ident(0, 8) "multiply",
                                Ident(11, 13) "by",
                            ],
                        },
                        typ: Unknown,
                    },
                    args: [
                        ExprNode {
                            pos: (
                                9,
                                10,
                            ),
                            kind: Literal {
                                literal: Literal(9, 10) IntDecimal(1),
                            },
                            typ: Unknown,
                        },
                        ExprNode {
                            pos: (
                                14,
                                15,
                            ),
                            kind: Literal {
                                literal: Literal(14, 15) IntDecimal(2),
                            },
                            typ: Unknown,
                        },
                    ],
                },
            },
            typ: Unknown,
        },
    ),
]

