pluma_parser/tests/snapshots/parse_success__chain_call_multiple_parts.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "\"hello\" . replace \"x\" with \"y\""
---

=== Source ===
"hello" . replace "x" with "y"

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        1,
        29,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                1,
                29,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        1,
                        29,
                    ),
                    kind: Call(
                        CallNode {
                            pos: (
                                1,
                                29,
                            ),
                            callee: ExprNode {
                                pos: (
                                    1,
                                    17,
                                ),
                                kind: MethodAccess {
                                    receiver: ExprNode {
                                        pos: (
                                            1,
                                            6,
                                        ),
                                        kind: Literal(
                                            LiteralNode {
                                                pos: (
                                                    1,
                                                    6,
                                                ),
                                                kind: Str(
                                                    "hello",
                                                ),
                                            },
                                        ),
                                        typ: Unknown,
                                    },
                                    method_parts: [
                                        IdentifierNode {
                                            pos: (
                                                10,
                                                17,
                                            ),
                                            name: "replace",
                                        },
                                        IdentifierNode {
                                            pos: (
                                                22,
                                                26,
                                            ),
                                            name: "with",
                                        },
                                    ],
                                },
                                typ: Unknown,
                            },
                            args: [
                                ExprNode {
                                    pos: (
                                        19,
                                        20,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                19,
                                                20,
                                            ),
                                            kind: Str(
                                                "x",
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                ExprNode {
                                    pos: (
                                        28,
                                        29,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                28,
                                                29,
                                            ),
                                            kind: Str(
                                                "y",
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ],
                            typ: Unknown,
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

